--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -4,7 +4,8 @@
   {% defer (url=api('apps'), pluck='objects', as='apps', key='slug') %}
     <ul class="clearfix">
       {% for app in this %}
-        <li class="app-list-app focusable" data-slug="{{ app.slug }}">
+        <li class="app-list-app focusable" id="focusable-{{ loop.index0 }}"
+            data-slug="{{ app.slug }}">
           <img src="{{ app.icons['128'] }}"
                alt="{{ app.name }}" title="{{ app.name }}">
           <span class="name">{{ app.name }}</span>
